# ChangeLog for www-client/chromium
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.572 2012/03/05 18:07:15 floppym Exp $

*chromium-17.0.963.65 (05 Mar 2012)

  05 Mar 2012; Mike Gilbert <floppym@gentoo.org> +chromium-17.0.963.65.ebuild:
  Version bump for stable channel release. Security bug 406975. Filtered
  KeygenHandlerTest, bug 407001.

  03 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  chromium-19.0.1055.1.ebuild, chromium-9999-r1.ebuild:
  Use system tlslite instead of the bundled one.

  03 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  +files/chromium-glib-r0.patch:
  Add missing patch, reported by floppym.

  02 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  chromium-18.0.1025.45.ebuild:
  Backport fix for bug #395773 by Oschtan, patch by Alphat-PC. Suppress test
  failure (bug #399269).

*chromium-18.0.1025.45 (01 Mar 2012)

  01 Mar 2012; Mike Gilbert <floppym@gentoo.org> +chromium-18.0.1025.45.ebuild,
  -chromium-18.0.1025.33.ebuild:
  Version bump for beta channel release.

*chromium-19.0.1055.1 (29 Feb 2012)

  29 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  -chromium-19.0.1041.0.ebuild, +chromium-19.0.1055.1.ebuild:
  Version bump for dev channel release. Remove old.

*chromium-19.0.1049.3 (24 Feb 2012)

  24 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  -chromium-19.0.1036.7.ebuild, +chromium-19.0.1049.3.ebuild,
  chromium-9999-r1.ebuild:
  Version bump for dev channel release. Fix bug #405515 by Julien Sanchez.
  Remove old.

*chromium-18.0.1025.39 (22 Feb 2012)

  22 Feb 2012; Mike Gilbert <floppym@gentoo.org> +chromium-18.0.1025.39.ebuild,
  -chromium-18.0.1025.11.ebuild:
  Version bump for beta channel release.

*chromium-19.0.1041.0 (17 Feb 2012)

  17 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  +chromium-19.0.1041.0.ebuild, chromium-9999-r1.ebuild: