@@ -21,24 +21,26 @@ AUX extract_v8_version.py 731 RMD160 71b134c9b88902259cb20ec232b8da6c3d8a15de SH
 AUX nacl.gypi 98 RMD160 fa4806fbc8c2e19763c1905a3bc431022b247825 SHA1 df4cee39e1d49e10f9c075f5e6e9db28e8260926 SHA256 25bddd2eee7821e18ddda06f6e69552c359e1c04a10971ac3985556c3d8ef059
 DIST chromium-17.0.963.56.tar.bz2 165312378 RMD160 8d29f7369f787c847be9f1f0cfb5fbe4484b7d2f SHA1 87863f6d02d9105724493025e3a60733cc3f8d20 SHA256 270be138d499c6c2092644af69acab8310cb05c3d06c3afe7891e488c29b020f
 DIST chromium-17.0.963.65.tar.bz2 165960037 RMD160 8feda2e325254db335210a0e69aaadce2acf7616 SHA1 f63d3da09848f41ffcbea5bdca261550a3778ed6 SHA256 ddfc9e380357d095ccc38d8b157087fa42fd2c08f7fe02c006200f8535b2aa1a
+DIST chromium-17.0.963.66.tar.bz2 165954172 RMD160 de8f94a93c010c700980048c8f9d84b50a67ef0b SHA1 804c61d67eb0a13b3f588d13da882a4900bd6ce8 SHA256 34dc897a64a2bd9be234536232c2649e95d3b2623f5ea715472a78a1bdf14801
 DIST chromium-18.0.1025.39.tar.bz2 174226740 RMD160 a4dba64edba300eeee6fe6092ad46c48a290e358 SHA1 aa9411e48dcc8182d8f563bb12e3b747550700a6 SHA256 64a3e0e8325b5269a48e2b49c7e236b33041ed6328a7f56e3e6f6fbf7eb345df
 DIST chromium-18.0.1025.45.tar.bz2 174374177 RMD160 a023ea3e381bcb16fa85cd1c0e7969a04faf81c4 SHA1 e2a84b5d25f118145cf898202981beb9262d7a04 SHA256 147911c38ed54be2dfc2751fe7b6e7783dd607f6be018881726f195612c91114
 DIST chromium-19.0.1049.3.tar.bz2 176721817 RMD160 14a6996885e29d13bb7912dc750db762ac48f0c0 SHA1 10dcd963c7e61d63f1a0d4eb6058216a402d7eb2 SHA256 3bdce0bd8381cd699014e7ec72ab02c7d8444ba511c27afff76bf015361c4021
 DIST chromium-19.0.1055.1.tar.bz2 177429663 RMD160 3b2385e148ff9e13829abf82b117a9d6e312ba9d SHA1 541aef6af73242ca15472d2a4e0ee921ddf8ddd0 SHA256 c0b189d2bef9cd2c261586b34ac96cec8dc07d67b3b27697af5a763c41af0d39
 EBUILD chromium-17.0.963.56.ebuild 17906 RMD160 90d4f1008405ff14822ea59a89938e8b4556a4ce SHA1 9dbd830257a7c230cfab297e38ddaeb297c95398 SHA256 7e281f08e72800eec241da971c05fc9615510765d617f7c61b8436afbea56762
 EBUILD chromium-17.0.963.65.ebuild 17925 RMD160 9564eaf6788f5f7cb12cf004b928d5891902956e SHA1 169c1191aaaf47b8cac60b35b0fbef514083a177 SHA256 92ce6fc1837ce7a4b01dd720ba89132737d60ec5651208d4e36e73ead9f8f42d
+EBUILD chromium-17.0.963.66.ebuild 17925 RMD160 d07a30d2602d67246a09ea74a4afe6e260a9bbe4 SHA1 ba0cc168802d5355a69f056a2b1ede0b2fa55cec SHA256 59a839fcf3ab5f6a686251c2bdffc798e7d0f3d543040639a61423c9f8989857
 EBUILD chromium-18.0.1025.39.ebuild 17850 RMD160 4b3072b2ec7f7aebdc62fb26b72c38f3ad534936 SHA1 810a8a10485a5db173ef4be2de4e01505da3a24c SHA256 b1428094aaa745af9971b6868965ab63914019e778ced22d6b08f5094f686daf
 EBUILD chromium-18.0.1025.45.ebuild 18042 RMD160 ce9a1717959b4c0ff1eb44c46fc6737b614682b1 SHA1 c2ee3d37f7b2d6d451f22d85937214fcd41d81bb SHA256 1e2f6911cc4bfdcf997ca3ef4beac97758b04e6eb9658bcfc7db8017f7f82f34
 EBUILD chromium-19.0.1049.3.ebuild 17673 RMD160 36bf6f1c493c7e313e7b44f3180f2681377f6d16 SHA1 ba056cdf8a0c0e447cd8923bca2c3f883e3fa1d4 SHA256 9643d31654ab9f53176fb3ea175a1746cfea11421d804edd43528a2c0a3f87db
 EBUILD chromium-19.0.1055.1.ebuild 17668 RMD160 b58af792f31224a8a5c4616958303ac2aeaf7037 SHA1 c491aefd85a92f9575adbb07fb439428336a9966 SHA256 35d4114f1f20f35b6f075a539ad661011986f8b7bff12ad2d721c467a48e7b9b
 EBUILD chromium-9999-r1.ebuild 19834 RMD160 9cb32db6ba1975982a98662c57635a9dfcc407b4 SHA1 0002bac9431012f02210203cd07627d49590ee6a SHA256 39f80e2b3af682c3a48c2002deda3e57b72d6d00ac053480bd80d0c5713764a8
-MISC ChangeLog 9027 RMD160 30341791a36961c2a8d5b7a0e6065cbd13a0cca0 SHA1 bcda7a36e40dd37537f048b19e7bc4d06547f036 SHA256 ec9439a50c72694cdd05f53ec9d488d8362c046ae6d4261ae78b9d79173b8322
+MISC ChangeLog 9187 RMD160 395158088d31d86c15520c132b399e7bc22b935a SHA1 ec63a75d105c8f144e1dcff5154905f8f3d675da SHA256 1cbbee4b5ec923c391871b220a406e96ab434fc384f4398367ca9450b9bfa8dc
 MISC ChangeLog-2011 114031 RMD160 819d2187b876e03ba1a5f23369eca56e554bcfe6 SHA1 c449259648a4f2633b8812e7761e8cdeaea7f948 SHA256 e2c2c75785c5eaf78b6efe01e357279cbb7be0c89d00b4053f475e963916fa54
 MISC metadata.xml 267 RMD160 3a166415fec415d539c1b7c32ed40b188488b9fb SHA1 5c3d71a9cea27175cbe8c98369b42b79c8643c6c SHA256 4e6afae33f60d6752cacf2785f7f9a396b8711cce605b73d0d752a4af7d01fc8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk9VANkACgkQC77qH+pIQ6SJjQEAlU4Yt9HMKGIkWstmuhe5rmpw
-vRbwrFKTfOXlnxKtVhQBAKi2k7rccxKT9301QpbOnCC16XrxTExf/Pb60ZMfcBd8
-=jlu/
+iF4EAREIAAYFAk9WqDIACgkQC77qH+pIQ6TyCwD9HOtzHk9n4ISIwwFIDhqjsXWx
+OiobctvF7X0PLrfW0xEA+wXl0ADtCpgpMiVI9JNynF6WGs6tzO+s0tHe65DFKYtb
+=bXsF
 -----END PGP SIGNATURE-----
