@@ -1,6 +1,11 @@
 # ChangeLog for www-client/chromium
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.572 2012/03/05 18:07:15 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.573 2012/03/07 00:13:31 floppym Exp $
+
+*chromium-17.0.963.66 (07 Mar 2012)
+
+  07 Mar 2012; Mike Gilbert <floppym@gentoo.org> +chromium-17.0.963.66.ebuild:
+  Version bump for stable channel release.
 
 *chromium-17.0.963.65 (05 Mar 2012)
 
